# ChangeLog for dev-ruby/rubyforge
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rubyforge/ChangeLog,v 1.6 2007/03/13 20:06:43 tove Exp $

  12 Mar 2007; Tom Gall <tgall@gentoo.org> rubyforge-0.3.1.ebuild:
  added ~ppc64

  05 Jan 2007; Bryan Østergaard <kloeri@gentoo.org> rubyforge-0.3.1.ebuild:
  Add ~ia64 keyword.

*rubyforge-0.3.1 (18 Dec 2006)

  18 Dec 2006; Hans de Graaff <graaff@gentoo.org> +rubyforge-0.3.1.ebuild:
  Version bump.

  04 Dec 2006; Hans de Graaff <graaff@gentoo.org> rubyforge-0.3.0.ebuild:
  Keyword for ~amd64.

*rubyforge-0.3.0 (03 Dec 2006)

  03 Dec 2006; Nguyễn Thái Ngọc Duy <pclouds@gentoo.org> +metadata.xml,
  +rubyforge-0.3.0.ebuild:
  Added rubyforge, part of #147065. Ebuild by Guillaume Benny <guillaume.benny@sympatico.ca>
