@@ -1,3 +1,0 @@
-MD5 b57ccd38e03c9333131b74dfb844c784 rubyforge-0.3.0.gem 26112
-RMD160 ec48680243423b940c0d48c6deb064501aed6db9 rubyforge-0.3.0.gem 26112
-SHA256 a9095158c144d03038e6ecae9611bfd3d073c32a68dc117b2cb3838c36a1efcf rubyforge-0.3.0.gem 26112
