@@ -1,0 +1,3 @@
+MD5 ca3b5d099ae1c250b37f4f94fb939cea rubyforge-0.4.1.gem 28672
+RMD160 1b92a2379525576f3ba3182014b6559b68315d16 rubyforge-0.4.1.gem 28672
+SHA256 0af4e40935404f39bec14af04b223b6219a708a07cad7610e0ebe7757f9e687b rubyforge-0.4.1.gem 28672
