@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/rubyforge
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rubyforge/ChangeLog,v 1.6 2007/03/13 20:06:43 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rubyforge/ChangeLog,v 1.7 2007/03/14 07:35:28 graaff Exp $
+
+*rubyforge-0.4.1 (14 Mar 2007)
+
+  14 Mar 2007; Hans de Graaff <graaff@gentoo.org> -rubyforge-0.3.0.ebuild,
+  +rubyforge-0.4.1.ebuild:
+  Version bump; remove old version.
 
   12 Mar 2007; Tom Gall <tgall@gentoo.org> rubyforge-0.3.1.ebuild:
   added ~ppc64
